# llvm_16

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  clang_libs.cmake  cliff.toml  example.cpp  gen_github_workflow_conditionals.cpp  gen_libs_from_built.sh  lldb_libs.cmake  llvm_libs.cmake  llvm_master_commit  ncurses_patch_api20_config.in  ncurses_patch_api20_configure  ncurses_patch_api20_ncurses_defs  ncurses_patch_api20_tests_configure.in  policy.txt  replxx_history.txt
.github/workflows/: android.yml  linux.yml  macos.yml  windows.yml
EXTRACTED/: SYSTEM_LIBRARIES.blake3
PDCursesMod/cmake/: project_common.cmake
PDCursesMod/gl/: CMakeLists.txt
PDCursesMod/release_BUILD/: CMakeCache.txt  cmake_install.cmake  target_arch_detect.c
PDCursesMod/release_BUILD/ncurses/: cmake_install.cmake
PDCursesMod/release_BUILD/vt/: cmake_install.cmake
PDCursesMod/sdl2/: CMakeLists.txt
argparse/include/argparse/: argparse.hpp
argparse/test/: test_default_value.cpp
bzip2/: CMakeLists.txt
clang/cmake/caches/: Fuchsia.cmake
clang/lib/CodeGen/: BackendUtil.cpp
clang/lib/FrontendTool/: ExecuteCompilerInvocation.cpp
clang/lib/Tooling/DumpTool/: ClangSrcLocDump.cpp
clang/tools/: CMakeLists.txt
clang/tools/arcmt-test/: arcmt-test.cpp
clang/tools/clang-format/: ClangFormat.cpp
clang/tools/clang-linker-wrapper/: ClangLinkerWrapper.cpp
clang/tools/clang-offload-bundler/: ClangOffloadBundler.cpp
clang/tools/clang-offload-packager/: ClangOffloadPackager.cpp
clang/tools/clang-repl/: CMakeLists.txt  ClangRepl.cpp
clang/tools/clang-shlib/: CMakeLists.txt
clang/tools/diagtool/: FindDiagnosticID.cpp
clang/tools/driver/: cc1as_main.cpp
clang/tools/libclang/: CMakeLists.txt
clang_driver/: CMakeLists.txt  default_formatting_style.cpp
clang_driver/driver/: ClangFormat.cpp  driver.cpp
clang_driver/include/: clang_driver.h
include/: argv_split.h  jit.h  miniedit.h
libarchive/: CMakeLists.txt
libarchive/libarchive/test/: CMakeLists.txt
libglob/: CMakeLists.txt  glob.c  glob.h
libxml2/: CMakeLists.txt  xmlreader.c
libxml2/android/: glob.c  glob.h  issetugid.c  issetugid.h
lldb/cmake/modules/: LLDBConfig.cmake
lldb/include/lldb/Utility/: LLDBLog.h
lldb/source/: CMakeLists.txt
lldb/source/API/: CMakeLists.txt
lldb/source/Core/: Debugger.cpp  PluginManager.cpp
lldb/source/Host/: CMakeLists.txt
lldb/source/Host/common/: PseudoTerminal.cpp
lldb/source/Host/posix/: ProcessLauncherPosixFork.cpp
lldb/source/Plugins/RegisterTypeBuilder/: RegisterTypeBuilderClang.cpp
lldb/source/Utility/: LLDBLog.cpp
lldb/test/: CMakeLists.txt
lldb/test/API/: CMakeLists.txt
lldb/tools/argdumper/: CMakeLists.txt
lldb/tools/driver/: CMakeLists.txt  driver_main.cpp
lldb/tools/intel-features/intel-mpx/: CMakeLists.txt
lldb/tools/lldb-fuzzer/lldb-commandinterpreter-fuzzer/: CMakeLists.txt
lldb/tools/lldb-fuzzer/lldb-expression-fuzzer/: CMakeLists.txt
lldb/tools/lldb-fuzzer/lldb-target-fuzzer/: CMakeLists.txt
lldb/tools/lldb-vscode/: CMakeLists.txt  README.md
lldb/unittests/API/: CMakeLists.txt
lldb/utils/lui/: debuggerdriver.py
llvm/: CMakeLists.txt
llvm/cmake/: config-ix.cmake  config.guess
llvm/cmake/modules/: FindFFI.cmake  FindSphinx.cmake  FindTerminfo.cmake  FindZ3.cmake  LLVMProcessSources.cmake
llvm/examples/: CMakeLists.txt
llvm/examples/OrcV2Examples/: CMakeLists.txt
llvm/include/llvm/: CMakeLists.txt  InitializePasses.h
llvm/include/llvm-c/: Support.h
llvm/include/llvm/CodeGen/: Passes.h
llvm/include/llvm/FuzzMutate/: FuzzerCLI.h
llvm/include/llvm/IR/: CMakeLists.txt  Intrinsics.td  LLVMContext.h
llvm/include/llvm/MC/: MCContext.h  MCStreamer.h  TargetRegistry.h
llvm/include/llvm/TargetParser/: CMakeLists.txt
llvm/lib/: CMakeLists.txt
llvm/lib/Analysis/: CMakeLists.txt  ConstantFolding.cpp  EHPersonalities.cpp  OptimizationRemarkEmitter.cpp  ValueTracking.cpp
llvm/lib/BinaryFormat/: CMakeLists.txt
llvm/lib/Bitcode/Writer/: BitcodeWriter.cpp
llvm/lib/CodeGen/: CMakeLists.txt  CodeGen.cpp  MachineInstr.cpp  TargetLoweringObjectFileImpl.cpp  TargetPassConfig.cpp
llvm/lib/CodeGen/AsmPrinter/: AsmPrinter.cpp  CMakeLists.txt  DwarfDebug.cpp  DwarfException.h
llvm/lib/CodeGen/SelectionDAG/: FunctionLoweringInfo.cpp  SelectionDAGBuilder.cpp  (+1 more)
llvm/lib/DebugInfo/: CMakeLists.txt
llvm/lib/Debuginfod/: CMakeLists.txt
llvm/lib/Demangle/: ItaniumDemangle.cpp
llvm/lib/ExecutionEngine/: CMakeLists.txt
llvm/lib/FileCheck/: FileCheck.cpp
llvm/lib/FuzzMutate/: CMakeLists.txt  FuzzerCLI.cpp
llvm/lib/IR/: AutoUpgrade.cpp  Function.cpp  LLVMContext.cpp  Verifier.cpp
llvm/lib/LTO/: CMakeLists.txt  LTOBackend.cpp  LTOCodeGenerator.cpp
llvm/lib/MC/: CMakeLists.txt  MCAsmBackend.cpp  MCAsmStreamer.cpp  MCContext.cpp  MCELFStreamer.cpp  MCNullStreamer.cpp  MCObjectFileInfo.cpp  MCStreamer.cpp  StringTableBuilder.cpp
llvm/lib/ObjCopy/: CMakeLists.txt  ConfigManager.cpp  ObjCopy.cpp
llvm/lib/Object/: ArchiveWriter.cpp  CMakeLists.txt  ObjectFile.cpp  SymbolSize.cpp
llvm/lib/ObjectYAML/: CMakeLists.txt  ObjectYAML.cpp  yaml2obj.cpp
llvm/lib/Passes/: CMakeLists.txt
llvm/lib/Support/: CMakeLists.txt  CommandLine.cpp
llvm/lib/TargetParser/: CMakeLists.txt
llvm/lib/Transforms/: CMakeLists.txt
llvm/tools/: CMakeLists.txt
llvm/tools/llvm-dwarfdump/: llvm-dwarfdump.cpp
llvm/tools/llvm-extract/: llvm-extract.cpp
llvm/tools/llvm-isel-fuzzer/: llvm-isel-fuzzer.cpp
llvm/tools/llvm-jitlink/: CMakeLists.txt  llvm-jitlink.cpp
llvm/tools/llvm-opt-fuzzer/: llvm-opt-fuzzer.cpp
llvm/tools/lto/: lto.cpp
llvm/tools/opt/: opt.cpp
llvm/utils/TableGen/: CMakeLists.txt  DisassemblerEmitter.cpp  TableGen.cpp  TableGenBackends.h
lzma2301/: CMakeLists.txt
lzma2301/C/: Aes.c  AesOpt.c  Sha256Opt.c
nix/: linux.nix  mingw-libedit.nix  mingw-ncurses.nix  mingw.nix
nix-mingw-libedit/: default.nix  foo.nix  mingw-ncurses.nix
replxx/src/: replxx.cxx  replxx_impl.hxx  terminal.cxx
src/: example.cpp  extract.cpp  file.h  jit.cpp  package.cpp  zpack_cpp.h
zlib/: CMakeLists.txt
(+46 files in other folders)
